sort indicators when we create the DTO from Entity